--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
+    "build": "tsc",
     "dev": "nodemon --watch src --ext ts --exec \"npx ts-node src/server.ts\""
   },
   "keywords": [],
