--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
+  "buildCommand": "cd backend && npm install && npm run build",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/api"
+      "destination": "/backend/api"
     }
   ]
 }
