--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
-  "buildCommand": "cd backend && npm install && npm run build",
   "builds": [
     {
-      "src": "backend/api/index.js",
-      "use": "@vercel/node"
+      "src": "backend/package.json",
+      "use": "@vercel/node",
+      "config": {
+        "serverless": true
+      }
     }
   ],
   "routes": [
