--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
-    "vercel-build": "npm run build",
-    "dev": "nodemon --watch src --ext ts --exec \"npx ts-node src/server.ts\""
+    "vercel-build": "npm run build && echo 'Build completed'",
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/server.ts\""
   },
   "keywords": [],
   "author": "",
