--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -42,5 +42,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
     "esModuleInterop": true,
-  }
+  },
+  "exclude": ["drizzle.config.ts", "node_modules"]
 }
